@@ -137,7 +137,7 @@ do
     { silent = true, expr = true, desc = ':help v_@-default' }
   )
 
-  --- Map |gx| to call |vim.ui.open| on the <cfile> at cursor.
+  --- Map |gx| to call |vim.ui.open| on the `textDocument/documentLink` or <cfile> at cursor.
   do
     local function do_open(uri)
       local cmd, err = vim.ui.open(uri)
