@@ -731,7 +731,10 @@ describe('statuscolumn', function()
         api.nvim_input_mouse('left', 'press', '', 0, 5, 8)
         eq('', eval('g:testvar'))
         api.nvim_input_mouse('right', 'press', '', 0, 6, 4)
-        eq('0 1 r 10', eval('g:testvar'))
+        -- Wait for the synchronous call of `textDocument/documentLink`
+        t.retry(nil, 1500, function()
+          eq('0 1 r 10', eval('g:testvar'))
+        end)
         api.nvim_input_mouse('left', 'press', '', 0, 7, 7)
         eq('0 1 l 11', eval('g:testvar'))
       end)
